--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#ffffffff</color>
     <color name="colorPrimaryDark">#ffffffff</color>
-    <color name="colorAccent">#ffffffff</color>
+    <color name="colorAccent">@color/hotPink</color>
     <color name="absoluteBlack">#ff000000</color>
     <color name="halfSnappedBlack">#80000000</color>
     <color name="coldBlue">#ff92d7ed</color>
