--- a/app/src/main/res/drawable/fog_b.xml
+++ b/app/src/main/res/drawable/fog_b.xml
@@ -2,10 +2,11 @@
     android:viewportWidth="65.55" android:width="66dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#00000000"
         android:pathData="M64.05,28.07a10,10 0,0 0,-9.4 -6.64,19.93 19.93,0 0,0 -38.74,-6.59c-0.37,0 -0.75,-0.05 -1.12,-0.05A13.29,13.29 0,0 0,1.5 28.07"
-        android:strokeColor="#000" android:strokeWidth="3"/>
+        android:strokeWidth="3"
+        android:strokeColor="#000"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
     <path android:fillColor="#FF000000" android:pathData="M63.72,32.14h-62v0l-0.15,0a1.5,1.5 0,0 0,0 3H63.72a1.5,1.5 0,0 0,0 -3Z"/>
-    <path android:fillColor="#FF000000" android:pathData="M64.05,28.07m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"/>
-    <path android:fillColor="#FF000000" android:pathData="M1.5,28.07m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"/>
     <path android:fillColor="#FF000000" android:pathData="M63.72,37.18h-62v0l-0.15,0a1.5,1.5 0,0 0,0 3H63.72a1.5,1.5 0,0 0,0 -3Z"/>
     <path android:fillColor="#FF000000" android:pathData="M63.85,42.23H1.7a1.5,1.5 0,0 0,0 3l0.15,0v0h62a1.5,1.5 0,0 0,0 -3Z"/>
     <path android:fillColor="#FF000000" android:pathData="M63.72,47.27H1.57a1.5,1.5 0,0 0,0 3l0.15,0v0h62a1.5,1.5 0,0 0,0 -3Z"/>
