--- a/app/src/main/res/drawable/hail_w.xml
+++ b/app/src/main/res/drawable/hail_w.xml
@@ -1,14 +1,22 @@
-<vector android:height="55dp" android:viewportHeight="55.05"
+<vector android:height="55dp"
+    android:viewportHeight="54.82"
     android:viewportWidth="66.11" android:width="66dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#00000000"
         android:pathData="M48.43,41.36h6.22a10,10 0,0 0,0 -19.93,19.93 19.93,0 0,0 -38.74,-6.59c-0.37,0 -0.75,-0.05 -1.12,-0.05a13.29,13.29 0,1 0,0 26.57h1.93"
-        android:strokeColor="#FFFFFFFF" android:strokeWidth="3"/>
+        android:strokeWidth="3"
+        android:strokeColor="#FFFFFFFF"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
     <path android:fillColor="#00000000"
         android:pathData="M39.67,36.05l-4.61,2.65l0,5.32l4.61,2.65l4.6,-2.65l0,-5.32l-4.6,-2.65z"
-        android:strokeColor="#FFFFFFFF" android:strokeWidth="3"/>
+        android:strokeWidth="3"
+        android:strokeColor="#FFFFFFFF"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
     <path android:fillColor="#00000000"
         android:pathData="M24.71,42.69l-4.61,2.66l0,5.31l4.61,2.66l4.6,-2.66l0,-5.31l-4.6,-2.66z"
-        android:strokeColor="#FFFFFFFF" android:strokeWidth="3"/>
-    <path android:fillColor="#FFFFFFFF" android:pathData="M16.68,41.36m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"/>
-    <path android:fillColor="#FFFFFFFF" android:pathData="M48.45,41.36m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"/>
+        android:strokeWidth="3"
+        android:strokeColor="#FFFFFFFF"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
 </vector>
