--- a/app/src/main/res/drawable/ic_cloud_cover.xml
+++ b/app/src/main/res/drawable/ic_cloud_cover.xml
@@ -2,6 +2,9 @@
     android:viewportWidth="66.11" android:width="66dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#00000000"
         android:pathData="M54.65,21.43a19.93,19.93 0,0 0,-38.74 -6.59c-0.37,0 -0.75,-0.05 -1.12,-0.05a13.29,13.29 0,1 0,0 26.57H54.65a10,10 0,0 0,0 -19.93Z"
-        android:strokeColor="#000" android:strokeWidth="3"/>
+        android:strokeWidth="3"
+        android:strokeColor="#000"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
     <path android:fillColor="#FF000000" android:pathData="M26,25a5.26,5.26 0,0 1,-1 -3.4,5.19 5.19,0 0,1 1,-3.37 3.2,3.2 0,0 1,2.63 -1.15,3.19 3.19,0 0,1 2.62,1.15 5.19,5.19 0,0 1,0.95 3.37,5.26 5.26,0 0,1 -0.95,3.4 3.21,3.21 0,0 1,-2.62 1.14A3.22,3.22 0,0 1,26 25ZM30.15,24.13a5,5 0,0 0,0.49 -2.53,4.89 4.89,0 0,0 -0.49,-2.5 1.67,1.67 0,0 0,-1.52 -0.8,1.71 1.71,0 0,0 -1.54,0.8 4.78,4.78 0,0 0,-0.5 2.5,4.88 4.88,0 0,0 0.5,2.53 1.7,1.7 0,0 0,1.54 0.79A1.67,1.67 0,0 0,30.18 24.1ZM29.57,32.43a0.64,0.64 0,0 1,-0.47 -0.19,0.65 0.65,0 0,1 -0.2,-0.5 0.91,0.91 0,0 1,0.15 -0.49l8,-13.9a0.8,0.8 0,0 1,0.69 -0.46,0.68 0.68,0 0,1 0.68,0.7 1.15,1.15 0,0 1,-0.13 0.48l-8,13.9A0.81,0.81 0,0 1,29.6 32.4ZM36.12,31a5.21,5.21 0,0 1,-0.95 -3.39,5.22 5.22,0 0,1 0.95,-3.38 3.63,3.63 0,0 1,5.27 0,5.27 5.27,0 0,1 0.93,3.39A5.27,5.27 0,0 1,41.39 31a3.59,3.59 0,0 1,-5.27 0ZM40.29,30.14a4.91,4.91 0,0 0,0.5 -2.53,4.74 4.74,0 0,0 -0.51,-2.5 1.86,1.86 0,0 0,-3.06 0,4.87 4.87,0 0,0 -0.49,2.5 4.93,4.93 0,0 0,0.49 2.52,1.88 1.88,0 0,0 3.07,0Z"/>
 </vector>
