--- a/app/src/main/res/drawable/ic_humidity.xml
+++ b/app/src/main/res/drawable/ic_humidity.xml
@@ -1,23 +1,38 @@
-<vector android:height="48dp" android:viewportHeight="48.01"
-    android:viewportWidth="41.79" android:width="42dp" xmlns:android="http://schemas.android.com/apk/res/android">
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="41dp"
+    android:height="48dp"
+    android:viewportWidth="41.07"
+    android:viewportHeight="48.32">
     <path android:fillColor="#00000000"
-        android:pathData="M19.63,1.21C4.59,20.38 1.47,25.09 1.5,32.87 4.85,48.28 16,45.89 19.76,46.53"
-        android:strokeColor="#000" android:strokeWidth="3"/>
+        android:pathData="M19.63,1.5C4.59,20.67 1.47,25.37 1.5,33.16 4.85,48.57 16,46.18 19.76,46.82"
+        android:strokeWidth="3"
+        android:strokeColor="#000"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
     <path android:fillColor="#00000000"
-        android:pathData="M35.88,25.69a18.71,18.71 0,0 1,1.26 7.18c-3.35,15.41 -14.49,13 -18.25,13.66"
-        android:strokeColor="#000" android:strokeWidth="3"/>
+        android:pathData="M36.17,26a19.18,19.18 0,0 1,1.26 7.19c-3.35,15.41 -14.5,13 -18.26,13.66"
+        android:strokeWidth="3"
+        android:strokeColor="#000"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
     <path android:fillColor="#00000000"
-        android:pathData="M19,1.21c1.61,2.06 3.09,4 4.44,5.7"
-        android:strokeColor="#000" android:strokeWidth="3"/>
-    <path android:fillColor="#FF000000" android:pathData="M19.34,1.5m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"/>
-    <path android:fillColor="#FF000000" android:pathData="M13.36,30.39a3.67,3.67 0,0 1,-0.72 -2.45,3.63 3.63,0 0,1 0.72,-2.43 2.46,2.46 0,0 1,2 -0.84,2.51 2.51,0 0,1 2,0.84 3.63,3.63 0,0 1,0.72 2.43,3.67 3.67,0 0,1 -0.72,2.45 2.54,2.54 0,0 1,-2 0.83A2.49,2.49 0,0 1,13.36 30.39ZM16.19,29.51a3.37,3.37 0,0 0,0.27 -1.57,3.19 3.19,0 0,0 -0.28,-1.55 0.9,0.9 0,0 0,-0.83 -0.49,0.88 0.88,0 0,0 -0.83,0.48 3.35,3.35 0,0 0,-0.27 1.56,3.37 3.37,0 0,0 0.27,1.57 0.88,0.88 0,0 0,0.83 0.48A0.9,0.9 0,0 0,16.19 29.51ZM16.7,35.69a0.74,0.74 0,0 1,-0.39 0.12,0.65 0.65,0 0,1 -0.48,-0.19 0.68,0.68 0,0 1,-0.21 -0.51,1 1,0 0,1 0.15,-0.51L21.31,25a1,1 0,0 1,0.33 -0.37,0.74 0.74,0 0,1 0.39,-0.12 0.7,0.7 0,0 1,0.69 0.7,1 1,0 0,1 -0.15,0.52L17,35.33A1,1 0,0 1,16.7 35.69ZM21,34.81a3.74,3.74 0,0 1,-0.71 -2.46A3.62,3.62 0,0 1,21 29.92a2.49,2.49 0,0 1,2 -0.82,2.46 2.46,0 0,1 2,0.83 3.63,3.63 0,0 1,0.72 2.43A3.66,3.66 0,0 1,25 34.81a2.46,2.46 0,0 1,-2 0.84A2.48,2.48 0,0 1,21 34.81ZM23.83,33.94a3.42,3.42 0,0 0,0.27 -1.58,3.36 3.36,0 0,0 -0.27,-1.55 1,1 0,0 0,-1.67 0,3.21 3.21,0 0,0 -0.28,1.55 3.27,3.27 0,0 0,0.28 1.58,1 1,0 0,0 1.67,0Z"/>
+        android:pathData="M19.66,1.5c1.62,2.06 3.09,4 4.44,5.7"
+        android:strokeWidth="3"
+        android:strokeColor="#000"
+        android:strokeLineCap="round" />
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M13.36,30.67a3.63,3.63 0,0 1,-0.72 -2.44,3.6 3.6,0 0,1 0.72,-2.43 2.46,2.46 0,0 1,2 -0.84,2.51 2.51,0 0,1 2,0.84 3.6,3.6 0,0 1,0.72 2.43,3.63 3.63,0 0,1 -0.72,2.44 2.51,2.51 0,0 1,-2 0.84A2.46,2.46 0,0 1,13.36 30.67ZM16.19,29.8a3.37,3.37 0,0 0,0.27 -1.57,3.19 3.19,0 0,0 -0.28,-1.55 1,1 0,0 0,-1.66 0,3.35 3.35,0 0,0 -0.27,1.56 3.37,3.37 0,0 0,0.27 1.57,0.88 0.88,0 0,0 0.83,0.48A0.9,0.9 0,0 0,16.19 29.8ZM16.7,36a0.74,0.74 0,0 1,-0.39 0.12,0.7 0.7,0 0,1 -0.69,-0.7 1.06,1.06 0,0 1,0.15 -0.52l5.54,-9.56a1,1 0,0 1,0.33 -0.36,0.74 0.74,0 0,1 0.39,-0.12 0.62,0.62 0,0 1,0.48 0.2,0.66 0.66,0 0,1 0.21,0.5 1,1 0,0 1,-0.15 0.51L17,35.61A0.93,0.93 0,0 1,16.7 36ZM21,35.1a3.74,3.74 0,0 1,-0.71 -2.46A3.6,3.6 0,0 1,21 30.21a2.49,2.49 0,0 1,2 -0.83,2.46 2.46,0 0,1 2,0.84 3.63,3.63 0,0 1,0.72 2.43A3.67,3.67 0,0 1,25 35.1a2.49,2.49 0,0 1,-2 0.83A2.5,2.5 0,0 1,21 35.1ZM23.83,34.22a3.37,3.37 0,0 0,0.27 -1.57,3.33 3.33,0 0,0 -0.27,-1.55 1,1 0,0 0,-1.67 0,3.19 3.19,0 0,0 -0.28,1.55 3.23,3.23 0,0 0,0.28 1.57,1 1,0 0,0 1.67,0Z" />
     <path android:fillColor="#00000000"
-        android:pathData="M32.85,1.83C26.47,10 25.14,12 25.16,15.28c1.42,6.54 6.15,5.53 7.75,5.8"
-        android:strokeColor="#000" android:strokeWidth="3"/>
+        android:pathData="M32.86,4.72c-5.49,7 -6.62,8.71 -6.61,11.56 1.22,5.62 5.29,4.75 6.66,5"
+        android:strokeWidth="3"
+        android:strokeColor="#000"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
     <path android:fillColor="#00000000"
-        android:pathData="M32.59,1.83C39,10 40.3,12 40.29,15.28c-1.42,6.54 -6.15,5.53 -7.75,5.8"
-        android:strokeColor="#000" android:strokeWidth="3"/>
-    <path android:fillColor="#FF000000" android:pathData="M32.73,1.95m-1.48,0a1.48,1.48 0,1 1,2.96 0a1.48,1.48 0,1 1,-2.96 0"/>
-    <path android:fillColor="#FF000000" android:pathData="M23.46,6.91m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"/>
-    <path android:fillColor="#FF000000" android:pathData="M35.89,25.69m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"/>
+        android:pathData="M33,4.72c5.48,7 6.62,8.71 6.61,11.56 -1.22,5.62 -5.29,4.75 -6.66,5"
+        android:strokeWidth="3"
+        android:strokeColor="#000"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
 </vector>
