--- a/app/src/main/res/drawable/ic_pressure.xml
+++ b/app/src/main/res/drawable/ic_pressure.xml
@@ -1,8 +1,12 @@
-<vector android:height="46dp" android:viewportHeight="46.41"
+<vector android:height="46dp"
+    android:viewportHeight="45.78"
     android:viewportWidth="53" android:width="53dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#00000000"
         android:pathData="M8.93,44.28a25.78,25.78 0,0 1,18.18 -8,24.2 24.2,0 0,1 17.53,7.41 25,25 0,1 0,-35.71 0.59Z"
-        android:strokeColor="#000" android:strokeWidth="3"/>
+        android:strokeWidth="3"
+        android:strokeColor="#000"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
     <path android:fillColor="#00000000"
         android:pathData="M26.5,26.5m-4.5,0a4.5,4.5 0,1 1,9 0a4.5,4.5 0,1 1,-9 0"
         android:strokeColor="#000" android:strokeWidth="3"/>
