--- a/app/src/main/res/drawable/partly_cloudy_night_w.xml
+++ b/app/src/main/res/drawable/partly_cloudy_night_w.xml
@@ -1,9 +1,18 @@
-<vector android:height="45dp" android:viewportHeight="44.72"
-    android:viewportWidth="77.31" android:width="77dp" xmlns:android="http://schemas.android.com/apk/res/android">
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="76dp"
+    android:height="45dp"
+    android:viewportWidth="76.2"
+    android:viewportHeight="44.66">
     <path android:fillColor="#00000000"
-        android:pathData="M54.65,23.28A19.93,19.93 0,0 0,15.91 16.7c-0.37,0 -0.75,-0.06 -1.12,-0.06a13.29,13.29 0,0 0,0 26.58H54.65a10,10 0,0 0,0 -19.94Z"
-        android:strokeColor="#FFFFFFFF" android:strokeWidth="3"/>
+        android:pathData="M54.65,23.23a19.93,19.93 0,0 0,-38.74 -6.59c-0.37,0 -0.75,-0.06 -1.12,-0.06a13.29,13.29 0,0 0,0 26.58H54.65a10,10 0,0 0,0 -19.93Z"
+        android:strokeWidth="3"
+        android:strokeColor="#FFFFFFFF"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
     <path android:fillColor="#00000000"
-        android:pathData="M63.58,28.11A13.31,13.31 0,0 0,74.7 21.32c-0.2,0 -0.38,0 -0.58,0 -11.47,0 -15.23,-11.92 -11.34,-19.79A13.32,13.32 0,0 0,50.65 10.2"
-        android:strokeColor="#FFFFFFFF" android:strokeWidth="3"/>
+        android:pathData="M63.58,28.05A13.29,13.29 0,0 0,74.7 21.26c-0.2,0 -0.38,0 -0.58,0C62.65,21.29 58.89,9.37 62.78,1.5a13.32,13.32 0,0 0,-12.13 8.64"
+        android:strokeWidth="3"
+        android:strokeColor="#FFFFFFFF"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
 </vector>
