--- a/app/src/main/res/drawable/wind_w.xml
+++ b/app/src/main/res/drawable/wind_w.xml
@@ -1,21 +1,30 @@
 <vector android:height="46dp" android:viewportHeight="45.6"
     android:viewportWidth="57.41" android:width="57dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FFFFFFFF" android:pathData="M1.5,13.11h24.75v3h-24.75z"/>
-    <path android:fillColor="#FFFFFFFF" android:pathData="M1.5,20.26h45.19v3h-45.19z"/>
-    <path android:fillColor="#FFFFFFFF" android:pathData="M1.5,27.41h41.36v3h-41.36z"/>
     <path android:fillColor="#00000000"
         android:pathData="M19.91,9.74a6.56,6.56 0,1 1,6.34 4.87"
-        android:strokeColor="#FFFFFFFF" android:strokeWidth="3"/>
+        android:strokeWidth="3"
+        android:strokeColor="#FFFFFFFF"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
     <path android:fillColor="#00000000"
         android:pathData="M42.86,28.91a7.6,7.6 0,1 1,-7.6 7.6,8 8,0 0,1 0.18,-1.64"
-        android:strokeColor="#FFFFFFFF" android:strokeWidth="3"/>
+        android:strokeWidth="3"
+        android:strokeColor="#FFFFFFFF"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
     <path android:fillColor="#00000000"
         android:pathData="M37.81,15a9,9 0,0 1,-0.33 -2.46,9.22 9.22,0 1,1 9.21,9.22"
-        android:strokeColor="#FFFFFFFF" android:strokeWidth="3"/>
-    <path android:fillColor="#FFFFFFFF" android:pathData="M19.91,9.74m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"/>
-    <path android:fillColor="#FFFFFFFF" android:pathData="M37.81,15m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"/>
-    <path android:fillColor="#FFFFFFFF" android:pathData="M35.43,34.88m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"/>
-    <path android:fillColor="#FFFFFFFF" android:pathData="M1.5,14.61m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"/>
-    <path android:fillColor="#FFFFFFFF" android:pathData="M1.5,21.76m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"/>
-    <path android:fillColor="#FFFFFFFF" android:pathData="M1.5,28.91m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"/>
+        android:strokeWidth="3"
+        android:strokeColor="#FFFFFFFF"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
+    <path
+        android:fillColor="#FFFFFFFF"
+        android:pathData="M1.5,13.11a1.5,1.5 0,0 0,0 3H26.25v-3Z" />
+    <path
+        android:fillColor="#FFFFFFFF"
+        android:pathData="M1.5,20.26a1.5,1.5 0,0 0,0 3H46.69v-3Z" />
+    <path
+        android:fillColor="#FFFFFFFF"
+        android:pathData="M1.5,27.41a1.5,1.5 0,0 0,0 3H42.86v-3Z" />
 </vector>
