--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -167,4 +167,10 @@
   <dimen name="temperature_bar_height">
     12dp
   </dimen>
+    <dimen name="sun_bar_height">
+        128dp
+    </dimen>
+    <dimen name="sun_bar_width">
+        0.5dp
+    </dimen>
 </resources>
