--- a/app/src/main/res/values-sw411dp/dimens.xml
+++ b/app/src/main/res/values-sw411dp/dimens.xml
@@ -167,4 +167,10 @@
   <dimen name="temperature_bar_height">
     13.7dp
   </dimen>
+    <dimen name="sun_bar_height">
+        146.13dp
+    </dimen>
+    <dimen name="sun_bar_width">
+        0.57dp
+    </dimen>
 </resources>
