--- a/app/src/main/res/values-sw420dp/dimens.xml
+++ b/app/src/main/res/values-sw420dp/dimens.xml
@@ -167,4 +167,10 @@
   <dimen name="temperature_bar_height">
     14.0dp
   </dimen>
+    <dimen name="sun_bar_height">
+        149.33dp
+    </dimen>
+    <dimen name="sun_bar_width">
+        0.58dp
+    </dimen>
 </resources>
