--- a/app/src/main/res/values-sw480dp/dimens.xml
+++ b/app/src/main/res/values-sw480dp/dimens.xml
@@ -167,4 +167,10 @@
   <dimen name="temperature_bar_height">
     16.0dp
   </dimen>
+    <dimen name="sun_bar_height">
+        170.67dp
+    </dimen>
+    <dimen name="sun_bar_width">
+        0.67dp
+    </dimen>
 </resources>
