--- a/app/src/main/res/values-sw540dp/dimens.xml
+++ b/app/src/main/res/values-sw540dp/dimens.xml
@@ -167,4 +167,10 @@
   <dimen name="temperature_bar_height">
     18.0dp
   </dimen>
+    <dimen name="sun_bar_height">
+        192.0dp
+    </dimen>
+    <dimen name="sun_bar_width">
+        0.75dp
+    </dimen>
 </resources>
