--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -167,4 +167,10 @@
   <dimen name="temperature_bar_height">
     20.0dp
   </dimen>
+    <dimen name="sun_bar_height">
+        213.33dp
+    </dimen>
+    <dimen name="sun_bar_width">
+        0.83dp
+    </dimen>
 </resources>
