--- a/app/src/main/res/values-sw420dp/dimens.xml
+++ b/app/src/main/res/values-sw420dp/dimens.xml
@@ -137,6 +137,9 @@
   <dimen name="text_view_36sp">
     42.0sp
   </dimen>
+  <dimen name="text_view_40sp">
+    46.67sp
+  </dimen>
   <dimen name="text_view_48sp">
     56.0sp
   </dimen>
@@ -157,6 +160,9 @@
   </dimen>
   <dimen name="divider_height">
     1.17dp
+  </dimen>
+  <dimen name="hourly_forecast_item_height">
+    121.33dp
   </dimen>
   <dimen name="temperature_pointer_width">
     2.33dp
