--- a/app/src/main/res/values-sw540dp/dimens.xml
+++ b/app/src/main/res/values-sw540dp/dimens.xml
@@ -137,6 +137,9 @@
   <dimen name="text_view_36sp">
     54.0sp
   </dimen>
+  <dimen name="text_view_40sp">
+    60.0sp
+  </dimen>
   <dimen name="text_view_48sp">
     72.0sp
   </dimen>
@@ -157,6 +160,9 @@
   </dimen>
   <dimen name="divider_height">
     1.5dp
+  </dimen>
+  <dimen name="hourly_forecast_item_height">
+    156.0dp
   </dimen>
   <dimen name="temperature_pointer_width">
     3.0dp
