--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -137,6 +137,9 @@
   <dimen name="text_view_36sp">
     60.0sp
   </dimen>
+  <dimen name="text_view_40sp">
+    66.67sp
+  </dimen>
   <dimen name="text_view_48sp">
     80.0sp
   </dimen>
@@ -157,6 +160,9 @@
   </dimen>
   <dimen name="divider_height">
     1.67dp
+  </dimen>
+  <dimen name="hourly_forecast_item_height">
+    173.33dp
   </dimen>
   <dimen name="temperature_pointer_width">
     3.33dp
