--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -46,6 +46,7 @@
     <dimen name="text_view_24sp">24sp</dimen>
     <dimen name="text_view_30sp">30sp</dimen>
     <dimen name="text_view_36sp">36sp</dimen>
+    <dimen name="text_view_40sp">40sp</dimen>
     <dimen name="text_view_48sp">48sp</dimen>
     <dimen name="text_view_54sp">54sp</dimen>
     <dimen name="text_view_62sp">62sp</dimen>
@@ -53,6 +54,7 @@
     <dimen name="widget_width">360dp</dimen>
     <dimen name="widget_margin">8dp</dimen>
     <dimen name="divider_height">1dp</dimen>
+    <dimen name="hourly_forecast_item_height">104dp</dimen>
     <dimen name="temperature_pointer_width">2dp</dimen>
     <dimen name="temperature_pointer_height">28dp</dimen>
     <dimen name="temperature_bar_height">12dp</dimen>
