--- a/app/src/main/res/layout/photo_details_layout.xml
+++ b/app/src/main/res/layout/photo_details_layout.xml
@@ -74,7 +74,7 @@
 
     <TextView
         android:id="@+id/camera_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_8"
         android:fontFamily="@font/montserrat"
@@ -82,6 +82,7 @@
         android:textSize="@dimen/text_view_14sp"
         app:layout_constraintBottom_toBottomOf="@id/ic_camera"
         app:layout_constraintStart_toEndOf="@id/ic_camera"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/ic_camera" />
 
     <ImageView
