--- a/app/src/main/res/layout/aqi_detail_layout.xml
+++ b/app/src/main/res/layout/aqi_detail_layout.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/margin_16">
+    android:paddingTop="@dimen/margin_16"
+    android:paddingBottom="@dimen/margin_16">
 
     <TextView
         android:id="@+id/airQualityTitle"
@@ -14,6 +15,7 @@
         android:textColor="@color/absoluteBlack"
         android:textSize="@dimen/text_view_20sp"
         app:fontFamily="@font/montserrat"
+        android:layout_marginStart="@dimen/margin_16"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,7 +34,8 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="10"
-
+            android:layout_marginStart="@dimen/margin_16"
+            android:layout_marginEnd="@dimen/margin_16"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -114,6 +117,8 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/aqi_scale_height"
             android:layout_marginTop="@dimen/margin_4"
+            android:layout_marginStart="@dimen/margin_16"
+            android:layout_marginEnd="@dimen/margin_16"
             android:orientation="horizontal"
             android:weightSum="10"
             app:layout_constraintEnd_toEndOf="parent"
@@ -179,6 +184,8 @@
             android:layout_marginTop="@dimen/margin_4"
             android:orientation="horizontal"
             android:weightSum="2"
+            android:layout_marginStart="@dimen/margin_16"
+            android:layout_marginEnd="@dimen/margin_16"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/index_scale">
@@ -208,6 +215,8 @@
         android:id="@+id/relative_layout_aqi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingStart="@dimen/margin_16"
+        android:paddingEnd="@dimen/margin_16"
         app:layout_constraintTop_toBottomOf="@id/aqi_bar">
 
         <TextView
@@ -256,6 +265,8 @@
         android:text="@string/provided_by_aqi_cn_org"
         android:textColor="@color/absoluteBlack"
         android:textSize="@dimen/text_view_12sp"
+        android:paddingStart="@dimen/margin_16"
+        android:paddingEnd="@dimen/margin_16"
         app:fontFamily="@font/montserrat"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/relative_layout_aqi" />
