--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -44,9 +44,10 @@
 
                 <ImageView
                     android:id="@+id/icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/icon_18dp"
+                    android:layout_height="@dimen/icon_18dp"
                     android:layout_alignParentEnd="true"
+                    android:layout_margin="@dimen/margin_4"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_location"
                     app:layout_constraintTop_toTopOf="@id/tv_location"
