--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -101,6 +101,12 @@
   <dimen name="icon_24dp">
     24dp
   </dimen>
+  <dimen name="icon_18dp">
+    18dp
+  </dimen>
+  <dimen name="icon_14dp">
+    14dp
+  </dimen>
   <dimen name="icon_30dp">
     30dp
   </dimen>
@@ -178,5 +184,14 @@
   </dimen>
   <dimen name="sun_bar_width">
     0.5dp
+  </dimen>
+  <dimen name="aqi_stroke_width">
+    2dp
+  </dimen>
+  <dimen name="aqi_translation_X">
+    -2dp
+  </dimen>
+  <dimen name="aqi_Index_size">
+    72dp
   </dimen>
 </resources>
