--- a/app/src/main/res/values-sw411dp/dimens.xml
+++ b/app/src/main/res/values-sw411dp/dimens.xml
@@ -101,6 +101,12 @@
   <dimen name="icon_24dp">
     27.4dp
   </dimen>
+  <dimen name="icon_18dp">
+    20.55dp
+  </dimen>
+  <dimen name="icon_14dp">
+    15.98dp
+  </dimen>
   <dimen name="icon_30dp">
     34.25dp
   </dimen>
@@ -178,5 +184,14 @@
   </dimen>
   <dimen name="sun_bar_width">
     0.57dp
+  </dimen>
+  <dimen name="aqi_stroke_width">
+    2.28dp
+  </dimen>
+  <dimen name="aqi_translation_X">
+    -2.28dp
+  </dimen>
+  <dimen name="aqi_Index_size">
+    82.2dp
   </dimen>
 </resources>
