--- a/app/src/main/res/values-sw420dp/dimens.xml
+++ b/app/src/main/res/values-sw420dp/dimens.xml
@@ -101,6 +101,12 @@
   <dimen name="icon_24dp">
     28.0dp
   </dimen>
+  <dimen name="icon_18dp">
+    21.0dp
+  </dimen>
+  <dimen name="icon_14dp">
+    16.33dp
+  </dimen>
   <dimen name="icon_30dp">
     35.0dp
   </dimen>
@@ -178,5 +184,14 @@
   </dimen>
   <dimen name="sun_bar_width">
     0.58dp
+  </dimen>
+  <dimen name="aqi_stroke_width">
+    2.33dp
+  </dimen>
+  <dimen name="aqi_translation_X">
+    -2.33dp
+  </dimen>
+  <dimen name="aqi_Index_size">
+    84.0dp
   </dimen>
 </resources>
