--- a/app/src/main/res/values-sw540dp/dimens.xml
+++ b/app/src/main/res/values-sw540dp/dimens.xml
@@ -101,6 +101,12 @@
   <dimen name="icon_24dp">
     36.0dp
   </dimen>
+  <dimen name="icon_18dp">
+    27.0dp
+  </dimen>
+  <dimen name="icon_14dp">
+    21.0dp
+  </dimen>
   <dimen name="icon_30dp">
     45.0dp
   </dimen>
@@ -178,5 +184,14 @@
   </dimen>
   <dimen name="sun_bar_width">
     0.75dp
+  </dimen>
+  <dimen name="aqi_stroke_width">
+    3.0dp
+  </dimen>
+  <dimen name="aqi_translation_X">
+    -3.0dp
+  </dimen>
+  <dimen name="aqi_Index_size">
+    108.0dp
   </dimen>
 </resources>
