--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -101,6 +101,12 @@
   <dimen name="icon_24dp">
     40.0dp
   </dimen>
+  <dimen name="icon_18dp">
+    30.0dp
+  </dimen>
+  <dimen name="icon_14dp">
+    23.33dp
+  </dimen>
   <dimen name="icon_30dp">
     50.0dp
   </dimen>
@@ -178,5 +184,14 @@
   </dimen>
   <dimen name="sun_bar_width">
     0.83dp
+  </dimen>
+  <dimen name="aqi_stroke_width">
+    3.33dp
+  </dimen>
+  <dimen name="aqi_translation_X">
+    -3.33dp
+  </dimen>
+  <dimen name="aqi_Index_size">
+    120.0dp
   </dimen>
 </resources>
