--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -15,11 +15,13 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/guideline"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:clipChildren="false">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:clipChildren="false">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/location_layout"
@@ -29,6 +31,7 @@
                 android:paddingTop="@dimen/margin_16"
                 android:paddingEnd="@dimen/margin_16"
                 android:paddingBottom="@dimen/margin_4"
+                android:clipChildren="false"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
