--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -221,11 +221,23 @@
                 </androidx.recyclerview.widget.RecyclerView>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <!--        <include layout="@layout/aqi_detail_layout" />-->
             <include layout="@layout/aqi_detail_layout" />
             <include layout="@layout/wind_detail_layout" />
-
             <include layout="@layout/sun_detail_layout" />
+
+            <TextView
+                android:id="@+id/poweredByDarkSky"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/powered_by_dark_sky"
+                android:gravity="end"
+                android:textColor="@color/absoluteBlack"
+                android:textSize="@dimen/text_view_12sp"
+                android:layout_marginTop="@dimen/margin_4"
+                android:paddingStart="@dimen/margin_16"
+                android:paddingEnd="@dimen/margin_16"
+                app:fontFamily="@font/montserrat"
+                />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
