--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -467,5 +467,5 @@
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
-    <include layout="@layout/about_me_layout" />
+    <include layout="@layout/about_layout" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
