--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,11 +95,12 @@
 
         <ImageView
             android:id="@+id/loading_icon"
-            android:layout_width="@dimen/big_icon_128dp"
-            android:layout_height="@dimen/big_icon_128dp"
+            android:layout_width="@dimen/icon_60dp"
+            android:layout_height="@dimen/icon_60dp"
+            android:padding="@dimen/margin_2"
+            android:layout_margin="@dimen/margin_16"
             android:layout_centerInParent="true"
-            android:layout_marginBottom="@dimen/margin_n_16"
-            android:src="@drawable/ic_loading"
+            android:src="@drawable/clear_day_b"
             tools:ignore="ContentDescription" />
 
         <TextView
