--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -41,6 +41,9 @@
   <dimen name="indicator_size">
     8dp
   </dimen>
+  <dimen name="margin_2">
+    2dp
+  </dimen>
   <dimen name="margin_4">
     4dp
   </dimen>
@@ -97,6 +100,9 @@
   </dimen>
   <dimen name="icon_72dp">
     72dp
+  </dimen>
+  <dimen name="icon_60dp">
+    60dp
   </dimen>
   <dimen name="icon_24dp">
     24dp
