--- a/app/src/main/res/values-sw420dp/dimens.xml
+++ b/app/src/main/res/values-sw420dp/dimens.xml
@@ -41,6 +41,9 @@
   <dimen name="indicator_size">
     9.33dp
   </dimen>
+  <dimen name="margin_2">
+    2.33dp
+  </dimen>
   <dimen name="margin_4">
     4.67dp
   </dimen>
@@ -97,6 +100,9 @@
   </dimen>
   <dimen name="icon_72dp">
     84.0dp
+  </dimen>
+  <dimen name="icon_60dp">
+    70.0dp
   </dimen>
   <dimen name="icon_24dp">
     28.0dp
