--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="aqi_scale_height">3dp</dimen>
     <dimen name="indicator_stroke_width">1dp</dimen>
     <dimen name="indicator_size">8dp</dimen>
+    <dimen name="margin_2">2dp</dimen>
     <dimen name="margin_4">4dp</dimen>
     <dimen name="margin_6">6dp</dimen>
     <dimen name="margin_8">8dp</dimen>
@@ -33,6 +34,7 @@
     <dimen name="forecast_item_height">220dp</dimen>
     <dimen name="icon_90dp">90dp</dimen>
     <dimen name="icon_72dp">72dp</dimen>
+    <dimen name="icon_60dp">60dp</dimen>
     <dimen name="icon_24dp">24dp</dimen>
     <dimen name="icon_18dp">18dp</dimen>
     <dimen name="icon_14dp">14dp</dimen>
