--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -56,6 +56,9 @@
   <dimen name="margin_12">
     12dp
   </dimen>
+  <dimen name="margin_14">
+    14dp
+  </dimen>
   <dimen name="margin_n_8">
     -8dp
   </dimen>
