--- a/app/src/main/res/values-sw540dp/dimens.xml
+++ b/app/src/main/res/values-sw540dp/dimens.xml
@@ -56,6 +56,9 @@
   <dimen name="margin_12">
     18.0dp
   </dimen>
+  <dimen name="margin_14">
+    21.0dp
+  </dimen>
   <dimen name="margin_n_8">
     -12.0dp
   </dimen>
