--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -56,6 +56,9 @@
   <dimen name="margin_12">
     20.0dp
   </dimen>
+  <dimen name="margin_14">
+    23.33dp
+  </dimen>
   <dimen name="margin_n_8">
     -13.33dp
   </dimen>
