--- a/app/src/main/res/values-sw320dp/dimens.xml
+++ b/app/src/main/res/values-sw320dp/dimens.xml
@@ -56,6 +56,9 @@
   <dimen name="margin_12">
     10.67dp
   </dimen>
+  <dimen name="margin_14">
+    12.44dp
+  </dimen>
   <dimen name="margin_n_8">
     -7.11dp
   </dimen>
