--- a/app/src/main/res/values-sw480dp/dimens.xml
+++ b/app/src/main/res/values-sw480dp/dimens.xml
@@ -56,6 +56,9 @@
   <dimen name="margin_12">
     16.0dp
   </dimen>
+  <dimen name="margin_14">
+    18.67dp
+  </dimen>
   <dimen name="margin_n_8">
     -10.67dp
   </dimen>
