--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -27,9 +27,9 @@
                 android:id="@+id/location_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingStart="@dimen/margin_16"
+                android:paddingStart="@dimen/margin_8"
                 android:paddingTop="@dimen/margin_16"
-                android:paddingEnd="@dimen/margin_16"
+                android:paddingEnd="@dimen/margin_8"
                 android:paddingBottom="@dimen/margin_4"
                 android:clipChildren="false"
                 app:layout_constraintTop_toTopOf="parent">
@@ -64,6 +64,7 @@
                     android:layout_width="@dimen/icon_18dp"
                     android:layout_height="@dimen/icon_18dp"
                     android:layout_margin="@dimen/margin_4"
+                    android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="@id/tv_location"
                     app:layout_constraintTop_toTopOf="@id/tv_location"
@@ -88,8 +89,8 @@
                 android:id="@+id/small_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_16"
-                android:layout_marginEnd="@dimen/margin_16"
+                android:layout_marginStart="@dimen/margin_8"
+                android:layout_marginEnd="@dimen/margin_8"
                 android:layout_marginBottom="@dimen/margin_8"
                 android:textColor="@color/absoluteBlack"
                 android:textSize="@dimen/text_view_18sp"
@@ -206,8 +207,8 @@
             android:baselineAligned="false"
             android:gravity="center"
             android:orientation="horizontal"
-            android:paddingStart="@dimen/margin_16"
-            android:paddingEnd="@dimen/margin_16"
+            android:paddingStart="@dimen/margin_8"
+            android:paddingEnd="@dimen/margin_8"
             android:paddingBottom="@dimen/margin_16"
             android:weightSum="3"
             app:layout_constraintTop_toBottomOf="@id/guideline1">
