--- a/app/src/main/res/values-sw420dp/dimens.xml
+++ b/app/src/main/res/values-sw420dp/dimens.xml
@@ -53,6 +53,9 @@
   <dimen name="margin_8">
     9.33dp
   </dimen>
+  <dimen name="margin_10">
+    11.67dp
+  </dimen>
   <dimen name="margin_12">
     14.0dp
   </dimen>
@@ -174,7 +177,7 @@
     9.33dp
   </dimen>
   <dimen name="divider_height">
-    1.17dp
+    0.58dp
   </dimen>
   <dimen name="hourly_forecast_item_height">
     121.33dp
