--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,6 +18,7 @@
     <dimen name="margin_4">4dp</dimen>
     <dimen name="margin_6">6dp</dimen>
     <dimen name="margin_8">8dp</dimen>
+    <dimen name="margin_10">10dp</dimen>
     <dimen name="margin_12">12dp</dimen>
     <dimen name="margin_14">14dp</dimen>
     <dimen name="margin_n_8">-8dp</dimen>
@@ -58,7 +59,7 @@
     <dimen name="widget_height">107dp</dimen>
     <dimen name="widget_width">360dp</dimen>
     <dimen name="widget_margin">8dp</dimen>
-    <dimen name="divider_height">1dp</dimen>
+    <dimen name="divider_height">0.5dp</dimen>
     <dimen name="hourly_forecast_item_height">104dp</dimen>
     <dimen name="temperature_pointer_width">2dp</dimen>
     <dimen name="temperature_pointer_height">28dp</dimen>
